Improving PacMan II
Improving PacMan II

--- a/code/PacManII.vcxproj
+++ b/code/PacManII.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Maze.cpp" />
     <ClCompile Include="Movements.cpp" />
+    <ClCompile Include="SceneActionBlocks.cpp" />
     <ClCompile Include="ScoreObjects.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Worlds.cpp" />
@@ -122,6 +123,7 @@
     <ClInclude Include="Maze.hpp" />
     <ClInclude Include="Movements.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SceneActionBlocks.hpp" />
     <ClInclude Include="ScoreObjects.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
