--- a/code/PacManII.vcxproj
+++ b/code/PacManII.vcxproj
@@ -96,16 +96,22 @@
     <ClCompile Include="Artists.cpp" />
     <ClCompile Include="Builders.cpp" />
     <ClCompile Include="DataGame.cpp" />
+    <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameStates.cpp" />
     <ClCompile Include="GUISystem.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Letters.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Maps.cpp" />
     <ClCompile Include="Maze.cpp" />
+    <ClCompile Include="Monsters.cpp" />
     <ClCompile Include="Movements.cpp" />
+    <ClCompile Include="PacMan.cpp" />
     <ClCompile Include="SceneActionBlocks.cpp" />
+    <ClCompile Include="Scenes.cpp" />
     <ClCompile Include="ScoreObjects.cpp" />
+    <ClCompile Include="StandardScenes.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Worlds.cpp" />
   </ItemGroup>
@@ -115,16 +121,22 @@
     <ClInclude Include="DataGame.hpp" />
     <ClInclude Include="Defs.hpp" />
     <ClInclude Include="doxy.hpp" />
+    <ClInclude Include="Fruit.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="GameStates.hpp" />
     <ClInclude Include="GUISystem.hpp" />
     <ClInclude Include="InputHandler.hpp" />
     <ClInclude Include="Letters.hpp" />
+    <ClInclude Include="Maps.hpp" />
     <ClInclude Include="Maze.hpp" />
+    <ClInclude Include="Monsters.hpp" />
     <ClInclude Include="Movements.hpp" />
+    <ClInclude Include="PacMan.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SceneActionBlocks.hpp" />
+    <ClInclude Include="Scenes.hpp" />
     <ClInclude Include="ScoreObjects.hpp" />
+    <ClInclude Include="StandardScenes.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Worlds.hpp" />
