--- a/code/PacManII.vcxproj
+++ b/code/PacManII.vcxproj
@@ -93,12 +93,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Builders.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Monsters.cpp" />
+    <ClCompile Include="Pacman.cpp" />
+    <ClCompile Include="Shield.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Builders.hpp" />
+    <ClInclude Include="Defs.hpp" />
     <ClInclude Include="doxy.hpp" />
+    <ClInclude Include="Game.hpp" />
+    <ClInclude Include="Monsters.hpp" />
+    <ClInclude Include="Pacman.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Shield.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
